# squadvox

./: .env.example  .gitignore  docker-compose.yml
client/: electron.js  package.json  preload.js
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
nginx/: nginx.conf
scripts/: hash-password.js
server/: Dockerfile  package.json  server.js
