[package]
name    = "squadvox"
version = "1.0.0"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri    = { version = "1", features = [] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Уменьшаем размер бинарника
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
